# ignasium

./: .gitignore  .gitmodules  README.md  projects.code-workspace
common/backend/: pyproject.toml
common/backend/src/shared/constants/: configs.py  constants.py  enums.py
common/backend/src/shared/core/: configs.py  container.py  database.py
common/backend/src/shared/models/: base.py  bookmark.py  platform.py  post.py  reaction.py  user.py
common/backend/src/shared/repositories/: __init__.py  base_repository.py  platform_repository.py  user_repository.py
common/backend/src/shared/utils/: string_utils.py
common/frontend/: hi.json
projects/cronjobs/: pyproject.toml
projects/cronjobs/crawling/: github_blog.py
projects/cronjobs/deprecated_crawling/: hi.py
projects/ignasium-webapp/: package-lock.json  package.json  tsconfig.json
projects/ignasium-webapp/src/: app.css
projects/ignasium-webapp/src/components/Dropdowns/: IndexDropdown.svelte
projects/ignasium-webapp/src/components/Navbars/: IndexNavbar.svelte
projects/ignasium-webapp/src/components/SideBars/: Sidebar.svelte  TagItem.svelte
projects/ignasium-webapp/src/lib/constants/: configs.ts  enums.ts
projects/ignasium-webapp/src/lib/interfaces/: browser.interface.ts
projects/ignasium-webapp/src/lib/stores/: browserStore.ts
projects/ignasium-webapp/src/routes/: +layout.svelte  +page.svelte
projects/ignasium-webapp/src/routes/test/: +page.svelte
projects/public_api/: pyproject.toml
projects/public_api/app/: main.py
projects/public_api/app/api/v1/: router.py
projects/public_api/app/api/v1/endpoint/: platform.py  user.py
projects/public_api/app/core/: container.py  middleware.py
projects/public_api/app/service/: base_service.py  platform_service.py
projects/public_api/app/tests/: __init__.py  conftest.py
projects/public_api/app/tests/unit_tests/: test_base_routers.py  test_custom_projects_imports.py  test_fixtures.py
projects/public_api/app/tests/utils_for_test/: router_for_test.py
projects/public_api/tests/: conftest.py
projects/public_api/tests/integration_tests/: test_platform_routers.py
projects/public_api/tests/unit_tests/: test_base_routers.py  test_fixtures.py
projects/public_api/tests/utils_for_test/: router_for_test.py
