[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
packages = [
    { include = "shared", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
loguru = "^0.7.2"
sqlalchemy = "^2.0.27"
pydantic = "^2.6.1"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
isort = "^5.13.2"
black = "^24.2.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
