[tool.poetry]
name = "ignasium-public-api"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
shared = { path = "../../common/backend/", develop = true }
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
python-multipart = "^0.0.9"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"
aiosqlite = "^0.19.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
